--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 
 .grilla {
     background-color: #D9AFD9;
-background-image: linear-gradient(0deg, #D9AFD9 53%, #6e94a2 100%);
+    background-image: linear-gradient(0deg, #D9AFD9 53%, #6e94a2 100%);
 
 }
 
@@ -60,13 +60,15 @@ span {
     
 }
 
-.principal img {
+.principal .img {
     height: 350px;
     width: 250px;
     margin-top: 50px;
     margin-left: 120px;
     margin-bottom: 40px;
 }
+
+
 
 .principal p {
     font-family: sans-serif;
@@ -149,13 +151,9 @@ span {
 
 
 .carousel-item img {
-    height: 100%;
-    width: 100%;
+    height: 450px;
+    width: 700px;
     
-}
-
-.carousel {
-    width: 800px;
 }
 
 
@@ -193,37 +191,6 @@ span {
     
 }
 
-.main{
-    display: grid;
-    grid-template-areas: 
-    "titulo subtitulo"
-    "carrusel parrafo";
-    grid-template-rows: 1fr, 1fr;
-    grid-template-columns: 1fr, 1fr;
-    
-}
-
-.titulo{
-    grid-area: titulo;
-    justify-self: center;
-}
-
-.subtitulo {
-    grid-area: subtitulo;
-    justify-self: center;
-}
-
-
-
-.carousel-slide {
-    grid-area: carrusel;
-}
-
-.parrafo {
-    grid-area: parrafo;
-    justify-self: center;
-    width: 450px;
-}
 
 @keyframes aparecer {
     from {
@@ -236,21 +203,22 @@ span {
 
 
 @media (max-width: 1090px) {
-     nav, ul, li {
-        margin-right: 50px;
+     .contenedor {
+        width: 100%;
      }
+
 }
 
 @media (max-width: 795px) {
-    nav, ul, li {
-       margin-right: 25px;
+    .contenedor {
+        width: 100%;
        
     }
 }
 
 @media (max-width: 620px) {
-    nav, ul, li {
-       margin-right: 10px;
+    .contenedor {
+        width: 100%;
     }
 }
 
@@ -269,4 +237,9 @@ span {
     .contenedor {
         font-size: 10px;
 }
+
+    .pieDePagina {
+        height: 250px;
+        padding-top: 250px;
+    }
 }
