--- a/estilos.css
+++ b/estilos.css
@@ -1,30 +1,22 @@
-
-.grilla {
-    background-color: #D9AFD9;
-    background-image: linear-gradient(0deg, #D9AFD9 53%, #6e94a2 100%);
-
+* {
+    padding: 0;
+    margin: 0;
 }
 
-.navbar {
-    background-color: #6e94a2;
-    
+body {
+    background-color: #9f9f9f;
+}
+
+.contenedor {
+    background-color: #000;    
 }
 
 
-.navbar-brand img {
+.contenedor img {
     height: 70px;
     width: 55px;
     margin: 8px;
 } 
-
-
-
-/*.contenedor a {
-    font-family: sans-serif;
-    text-decoration: none;
-    color: aliceblue;
-    font-size: 18px;
-}*/
 
 
 .principal {
@@ -45,7 +37,7 @@
 }
 
 span {
-    color: #D9AFD9;
+    color: #9c5a9c;
 }
 
 
@@ -82,37 +74,12 @@ span {
 .principal .pInicio {
     width: 990px;
 }
-.pieDePagina {
-    color: #537987;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    
-}
-.pieDePagina p{
-    margin: 10px;
-    text-shadow: #000 .5px .5px;
-}
 
 .principal video {
     margin-bottom: 20px;
 }
 
-.principal .imagen {
-    height: 300px;
-    width: 450px;
-
-}
-
-
-.cuadricula {
-    background-color: #D9AFD9;
-    background-image: linear-gradient(0deg, #D9AFD9 53%, #6e94a2 100%);
-
-}
-
-
-.carousel-item img {
+.carousel-item img{
     height: 450px;
     width: 700px;
     
@@ -128,29 +95,18 @@ span {
     resize: none;
 }
 
-.grilla {
-    display: grid;
-    grid-template-areas: 
-    "contenedor"
-    "principal"
-    "pieDePagina";
-    grid-template-rows: 1fr, 1fr, 1fr;
-}
-
-.contenedor {
-    grid-area: contenedor;
-
-}
-
-.principal {
-    grid-area: principal;
-
-}
 
 .pieDePagina {
-    grid-area: pieDePagina;
-
+    background-color: #000;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
     
+}
+.pieDePagina p{
+    color: #ff6cff;
+    margin: 10px;
+    text-shadow: #000 .5px .5px;
 }
 
 
